feat(前端杂项): JS手写题 前端性能优化 常用正则 数组去重 方法封装

--- a/相关开发文档/相关库 开发文档链接.md
+++ b/相关开发文档/相关库 开发文档链接.md
@@ -1,4 +1,10 @@
-### 相关库 开发文档链接
+# 相关库 开发文档链接
 
-#### [axios](http://www.axios-js.com/zh-cn/docs/#%E5%AE%9E%E4%BE%8B%E6%96%B9%E6%B3%95)
+## 请求
 
+> 1. [axios](http://www.axios-js.com/zh-cn/docs/#%E5%AE%9E%E4%BE%8B%E6%96%B9%E6%B3%95) axios 请求库
+> 2. tests
+
+## 动画
+
++ [ant motion](https://motion.ant.design/api/queue-anim-cn)
