--- a/前端杂项/方法封装.md
+++ b/前端杂项/方法封装.md
@@ -1,14 +1,21 @@
+
+
+
+
 # 各种方法
 
-## 1、**数据类型**
+
+
+## 1、<a id="type">数据类型</a>
 
 ``` javascript
 function type(para) {
-    return Object.prototype.toString.call(para)
+    return Object.prototype.toString.call(para) // [object ?]
 }
+
 ```
 
-## 2、数组去重
+## 2、<a id="unique">数组去重</a>
 
 ``` javascript
 function unique1(arr) {
@@ -36,7 +43,7 @@ function unique3(arr) {
 
 ```
 
-## 3、字符串去重
+## 3、 <a id="stringunique">字符串去重</a>
 
 ``` javascript
 String.prototype.unique = function () {
@@ -632,6 +639,7 @@ function getWindonHref() {
     return obj;
 }
 
+// 所有参数。
 function getParams(url) {
   const res = {}
   if (url.includes('?')) {
@@ -644,6 +652,16 @@ function getParams(url) {
     })
   }
   return res
+}
+
+// 定位某一个参数
+const getUrlParam = function(name) { // 获取url参数
+  let reg = new RegExp('(^|&?)' + name + '=([^&]*)(&|$)', 'i')
+  let r = window.location.href.substr(1).match(reg)
+  if (r != null) {
+    return decodeURI(r[2])
+  }
+  return undefined
 }
 
 // 测试
@@ -754,6 +772,69 @@ function ajax(method, url, callback, data, flag) {
 }
 
 
+const ajax = function(conf) { // ajax操作
+  let url = conf.url,
+    data = conf.data,
+    senData = [], // 封装后的数据
+    async = conf.async !== undefined ? conf.async : true, // ture为异步请求
+      type = conf.type || 'get', // 默认请求方式get
+      dataType = conf.dataType || 'json',
+      contenType = conf.contenType || 'application/x-www-form-urlencoded',
+      success = conf.success,
+      error = conf.error,
+      isForm = conf.isForm || false, // 是否formdata
+      header = conf.header || {}, // 头部信息
+      xhr = '' // 创建ajax引擎对象
+  if (data == null) {
+    senData = ''
+  } else if (typeof data === 'object' && !isForm) { // 如果data是对象，转换为字符串
+    for (var k in data) {
+      senData.push(encodeURIComponent(k) + '=' + encodeURIComponent(data[k]))
+    }
+    senData = senData.join('&')
+  } else {
+    senData = data
+  }
+  try {
+    xhr = new ActiveXObject('microsoft.xmlhttp') // IE内核系列浏览器
+  } catch (e1) {
+    try {
+      xhr = new XMLHttpRequest() // 非IE内核浏览器
+    } catch (e2) {
+      if (error != null) {
+        error('不支持ajax请求')
+      }
+    }
+  };
+  xhr.open(type, type !== 'get' ? url : url + '?' + senData, async)
+  if (type !== 'get' && !isForm) {
+    xhr.setRequestHeader('content-type', contenType)
+  }
+  for (var h in header) {
+    xhr.setRequestHeader(h, header[h])
+  }
+  xhr.send(type !== 'get' ? senData : null)
+  xhr.onreadystatechange = function() {
+    if (xhr.readyState === 4) {
+      if (xhr.status >= 200 && xhr.status < 300) {
+        if (dataType === 'json' && success != null) {
+          let res = ''
+          try {
+            res = eval('(' + xhr.responseText + ')')
+          } catch (e) {
+            console.log(e)
+          }
+          success(res) // 将json字符串转换为js对象
+        };
+      } else {
+        if (error != null) {
+          error('通讯失败!' + xhr.status)
+        }
+      }
+    }
+  }
+}
+
 ```
 
 ## 34、异步加载 script
@@ -802,6 +883,27 @@ var cookie = {
     }
 }
 
+
+const cookie = { // cookie操作【set，get，del】
+  set: function(name, value, day) {
+    let oDate = new Date()
+    oDate.setDate(oDate.getDate() + (day || 30))
+    document.cookie = name + '=' + value + ';expires=' + oDate + "; path=/;"
+  },
+  get: function(name) {
+    let str = document.cookie
+    let arr = str.split('; ')
+    for (let i = 0; i < arr.length; i++) {
+      let newArr = arr[i].split('=')
+      if (newArr[0] === name) {
+        return newArr[1]
+      }
+    }
+  },
+  del: function(name) {
+    this.set(name, '', -1)
+  }
+}
 
 ```
 
@@ -1228,10 +1330,41 @@ const isDateValid = (...val) => !Number.isNaN(new Date(...val).valueOf());
 const dayOfYear = (date) =>  Math.floor((date - new Date(date.getFullYear(), 0, 0)) / 1000 / 60 / 60 / 24);
 ```
 
-## 56、首字符串大写
+## 56、字符串 大小写
 
 ```javascript
-const capitalize = str => str.charAt(0).toUpperCase() + str.slice(1)capitalize("follow for more")
+//首字母大写
+const capitalize = str => str.charAt(0).toUpperCase() + str.slice(1)
+capitalize("follow for more")
+
+
+const changeCase = function(str, type) { // 字符串大小写转换 type:  1:首字母大写  2：首页母小写  3：大小写转换  4：全部大写  5：全部小写
+  type = type || 4
+  switch (type) {
+    case 1:
+      return str.replace(/\b\w+\b/g, function(word) {
+        return word.substring(0, 1).toUpperCase() + word.substring(1).toLowerCase()
+      })
+    case 2:
+      return str.replace(/\b\w+\b/g, function(word) {
+        return word.substring(0, 1).toLowerCase() + word.substring(1).toUpperCase()
+      })
+    case 3:
+      return str.split('').map(function(word) {
+        if (/[a-z]/.test(word)) {
+          return word.toUpperCase()
+        } else {
+          return word.toLowerCase()
+        }
+      }).join('')
+    case 4:
+      return str.toUpperCase()
+    case 5:
+      return str.toLowerCase()
+    default:
+      return str
+  }
+}
 ```
 
 ## 57、两日期之间的天数
@@ -1258,5 +1391,588 @@ const randomHex = () => `#${Math.floor(Math.random() * 0xffffff).toString(16).pa
 
 ```javascript
 const getSelectedText = () => window.getSelection().toString();	
+```
+
+## 61、外部加载js｜css｜风格
+
+```javascript
+
+const loadRes = function(name, type, fn) { // 加载js || css || style
+  let ref
+  if (type === 'js') { // 外部js
+    ref = document.createElement('script')
+    ref.setAttribute('type', 'text/JavaScript')
+    ref.setAttribute('src', name)
+  } else if (type === 'css') { // 外部css
+    ref = document.createElement('link')
+    ref.setAttribute('rel', 'stylesheet')
+    ref.setAttribute('type', 'text/css')
+    ref.setAttribute('href', name)
+  } else if (type === 'style') { // style
+    ref = document.createElement('style')
+    ref.innerhtml = name
+  }
+  if (typeof ref !== 'undefined') {
+    document.getElementsByTagName('head')[0].appendChild(ref)
+    ref.onload = function() { // 加载完成执行
+      typeof fn === 'function' && fn()
+    }
+  }
+}
+```
+
+## 62、 存储(缓存)
+
+```javascript
+const store = { // 本地存储
+  set: function(name, value, day) { // 设置
+    let d = new Date()
+    let time = 0
+    day = (typeof(day) === 'undefined' || !day) ? 1 : day // 时间,默认存储1天
+    time = d.setHours(d.getHours() + (24 * day)) // 毫秒
+    localStorage.setItem(name, JSON.stringify({
+      data: value,
+      time: time
+    }))
+  },
+  get: function(name) { // 获取
+    let data = localStorage.getItem(name)
+    if (!data) {
+      return null
+    }
+    let obj = JSON.parse(data)
+    if (new Date().getTime() > obj.time) { // 过期
+      localStorage.removeItem(name)
+      return null
+    } else {
+      return obj.data
+    }
+  },
+  clear: function(name) { // 清空
+    if (name) { // 删除键为name的缓存
+      localStorage.removeItem(name)
+    } else { // 清空全部
+      localStorage.clear()
+    }
+  }
+}
+```
+
+## 63、 JS获取元素样式
+
+```javascript
+
+const getRealStyle = function(obj, styleName) { // Js获取元素样式【支持内联】
+var realStyle = null
+  if (obj.currentStyle) {
+    realStyle = obj.currentStyle[styleName]
+  } else if (window.getComputedStyle) {
+    realStyle = window.getComputedStyle(obj, null)[styleName]
+  }
+  return realStyle
+}
+```
+
+## 64、 时间格式化
+
+```javascript
+
+const formatDate = function(fmt, date) { // 时间格式化 【'yyyy-MM-dd hh:mm:ss',时间】
+  if (typeof date !== 'object') {
+    date = !date ? new Date() : new Date(date)
+  }
+var o = {
+    'M+': date.getMonth() + 1, // 月份
+    'd+': date.getDate(), // 日
+    'h+': date.getHours(), // 小时
+    'm+': date.getMinutes(), // 分
+    's+': date.getSeconds(), // 秒
+    'q+': Math.floor((date.getMonth() + 3) / 3), // 季度
+    'S': date.getMilliseconds() // 毫秒
+  }
+  if (/(y+)/.test(fmt)) {
+    fmt = fmt.replace(RegExp.$1, (date.getFullYear() + '').substr(4 - RegExp.$1.length))
+  }
+  for (var k in o) {
+    if (new RegExp('(' + k + ')').test(fmt)) {
+      fmt = fmt.replace(RegExp.$1, (RegExp.$1.length === 1) ? (o[k]) : (('00' + o[k]).substr(('' + o[k]).length)))
+    }
+  }
+  return fmt
+}
+```
+
+## 65、 fetch 请求封装
+
+```javascript
+
+const fetch = function(url, setting) { // fetch请求的封装
+  let opts = { // 设置参数的初始值
+    method: (setting.method || 'GET').toUpperCase(), // 请求方式
+    headers: setting.headers || {}, // 请求头设置
+    credentials: setting.credentials || true, // 设置cookie是否一起发送
+    body: setting.body || {},
+    mode: setting.mode || 'no-cors', // 可以设置 cors, no-cors, same-origin
+    redirect: setting.redirect || 'follow', // follow, error, manual
+    cache: setting.cache || 'default' // 设置 cache 模式 (default, reload, no-cache)
+  }
+  let dataType = setting.dataType || 'json' // 解析方式
+  let data = setting.data || '' // 参数
+  let paramsFormat = function(obj) { // 参数格式
+    var str = ''
+    for (var i in obj) {
+      str += `${i}=${obj[i]}&`
+    }
+    return str.split('').slice(0, -1).join('')
+  }
+
+  if (opts.method === 'GET') {
+    url = url + (data ? `?${paramsFormat(data)}` : '')
+  } else {
+    setting.body = data || {}
+  }
+  return new Promise((resolve, reject) => {
+    fetch(url, opts).then(async res => {
+      let data = dataType === 'text' ? await res.text() : dataType === 'blob' ? await res.blob() : await res.json()
+      resolve(data)
+    }).catch(e => {
+      reject(e)
+    })
+  })
+}
+```
+
+## 66、判断设备（ios, android, web）
+
+```javascript
+const isDevice = function() { // 判断是android还是ios还是web
+  var ua = navigator.userAgent.toLowerCase()
+  if (ua.match(/iPhone\sOS/i) === 'iphone os' || ua.match(/iPad/i) === 'ipad') { // ios
+    return 'iOS'
+  }
+  if (ua.match(/Android/i) === 'android') {
+    return 'Android'
+  }
+  return 'Web'
+}
+```
+
+## 67、判断是否为微信
+
+```javascript
+
+const isWx = function() { // 判断是否为微信
+  var ua = window.navigator.userAgent.toLowerCase()
+  if (ua.match(/MicroMessenger/i) === 'micromessenger') {
+    return true
+  }
+  return false
+}
+```
+
+## 68、文本复制
+
+```javascript
+
+const copyTxt = function(text, fn) { // 复制功能
+  if (typeof document.execCommand !== 'function') {
+    console.log('复制失败，请长按复制')
+    return
+  }
+  var dom = document.createElement('textarea')
+  dom.value = text
+  dom.setAttribute('style', 'display: block;width: 1px;height: 1px;')
+  document.body.appendChild(dom)
+  dom.select()
+  var result = document.execCommand('copy')
+  document.body.removeChild(dom)
+  if (result) {
+    console.log('复制成功')
+    typeof fn === 'function' && fn()
+    return
+  }
+  if (typeof document.createRange !== 'function') {
+    console.log('复制失败，请长按复制')
+    return
+  }
+  var range = document.createRange()
+  var div = document.createElement('div')
+  div.innerhtml = text
+  div.setAttribute('style', 'height: 1px;fontSize: 1px;overflow: hidden;')
+  document.body.appendChild(div)
+  range.selectNode(div)
+  var selection = window.getSelection()
+  console.log(selection)
+  if (selection.rangeCount > 0) {
+    selection.removeAllRanges()
+  }
+  selection.addRange(range)
+  document.execCommand('copy')
+  typeof fn === 'function' && fn()
+  console.log('复制成功')
+}
+```
+
+## 69、判断是否是数组
+
+```javascript
+const isArray = function(arr) { // 判断是否是一个数组
+  return Object.prototype.toString.call(arr) === '[object Array]'
+}
+```
+
+## 70、判断两个数组是否相等
+
+```javascript
+const arrayEqual = function(arr1, arr2) { //判断两个数组是否相等
+  if (arr1 === arr2) return true;
+  if (arr1.length != arr2.length) return false;
+  for (let i = 0; i < arr1.length; ++i) {
+    if (arr1[i] !== arr2[i]) return false;
+  }
+  return true;
+}
+```
+
+## 71、时间转换 (有问题)
+
+```javascript
+const stamp = { // 时间，时间戳转换
+  getTime: function(time) { // 时间转10位时间戳
+    let date = time ? new Date(time) : new Date()
+    return Math.round(date.getTime() / 1000)
+  },
+  timeToStr: function(time, fmt) { // 10位时间戳转时间
+    return new Date(time * 1000).pattern(fmt || 'yyyy-MM-dd')
+  }
+}
+```
+
+## 72、是否PC端
+
+```javascript
+
+const isPC = function() { // 是否为PC端
+  let userAgentInfo = navigator.userAgent
+  let Agents = ['Android', 'iPhone', 'SymbianOS', 'Windows Phone', 'iPad', 'iPod']
+  let flag = true
+  for (let v = 0; v < Agents.length; v++) {
+    if (userAgentInfo.indexOf(Agents[v]) > 0) {
+      flag = false
+      break
+    }
+  }
+  return flag
+}
+```
+
+## 73、去掉空格
+
+```javascript
+
+const trim = function(str, type) { // 去除空格， type:  1-所有空格  2-前后空格  3-前空格 4-后空格
+  type = type || 1
+  switch (type) {
+    case 1:
+      return str.replace(/\s+/g, '')
+    case 2:
+      return str.replace(/(^\s*)|(\s*$)/g, '')
+    case 3:
+      return str.replace(/(^\s*)/g, '')
+    case 4:
+      return str.replace(/(\s*$)/g, '')
+    default:
+      return str
+  }
+}
+```
+
+## 74、HTML过滤
+
+```javascript
+const filterTag = function(str) { // 过滤html代码(把<>转换)
+  str = str.replace(/&/ig, '&')
+  str = str.replace(/</ig, '<')
+  str = str.replace(/>/ig, '>')
+  str = str.replace(' ', ' ')
+  return str
+}
+```
+
+## 75、生成随机数范围
+
+```javascript
+
+const random = function(min, max) { // 生成随机数范围
+  if (arguments.length === 2) {
+    return Math.floor(min + Math.random() * ((max + 1) - min))
+  } else {
+    return null
+  }
+}
+
+const random = (min=10,max=null)=>{
+  return max? Math.floor(max - min)+min:Math.floor(min)
+}
+
+
+```
+
+## 76、数字转中文大写
+
+```javascript
+const numberToChinese = function(num) { // 将阿拉伯数字翻译成中文的大写数字
+  let AA = new Array('零', '一', '二', '三', '四', '五', '六', '七', '八', '九', '十')
+  let BB = new Array('', '十', '百', '仟', '萬', '億', '点', '')
+  let a = ('' + num).replace(/(^0*)/g, '').split('.')
+  let k = 0
+  let re = ''
+  for (let i = a[0].length - 1; i >= 0; i--) {
+    switch (k) {
+      case 0:
+        re = BB[7] + re
+        break
+      case 4:
+        if (!new RegExp('0{4}//d{' + (a[0].length - i - 1) + '}$').test(a[0])) {
+          re = BB[4] + re
+        }
+        break
+      case 8:
+        re = BB[5] + re
+        BB[7] = BB[5]
+        k = 0
+        break
+    }
+    if (k % 4 === 2 && a[0].charAt(i + 2) !== 0 && a[0].charAt(i + 1) === 0) {
+      re = AA[0] + re
+    }
+    if (a[0].charAt(i) !== 0) {
+      re = AA[a[0].charAt(i)] + BB[k % 4] + re
+    }
+    k++
+  }
+  if (a.length > 1) { // 加上小数部分(如果有小数部分)
+    re += BB[6]
+    for (let i = 0; i < a[1].length; i++) {
+      re += AA[a[1].charAt(i)]
+    }
+  }
+  if (re === '一十') {
+    re = '十'
+  }
+  if (re.match(/^一/) && re.length === 3) {
+    re = re.replace('一', '')
+  }
+  return re
+}
+```
+
+## 77、原生事件操作
+
+```javascript
+
+const dom = {
+  $: function(selector) {
+    let type = selector.substring(0, 1)
+    if (type === '#') {
+      if (document.querySelecotor) return document.querySelector(selector)
+      return document.getElementById(selector.substring(1))
+    } else if (type === '.') {
+      if (document.querySelecotorAll) return document.querySelectorAll(selector)
+      return document.getElementsByClassName(selector.substring(1))
+    } else {
+      return document['querySelectorAll' ? 'querySelectorAll' : 'getElementsByTagName'](selector)
+    }
+  },
+  hasClass: function(ele, name) { /* 检测类名 */
+    return ele.className.match(new RegExp('(\\s|^)' + name + '(\\s|$)'))
+  },
+  addClass: function(ele, name) { /* 添加类名 */
+    if (!this.hasClass(ele, name)) ele.className += ' ' + name
+  },
+  removeClass: function(ele, name) { /* 删除类名 */
+    if (this.hasClass(ele, name)) {
+      let reg = new RegExp('(\\s|^)' + name + '(\\s|$)')
+      ele.className = ele.className.replace(reg, '')
+    }
+  },
+  replaceClass: function(ele, newName, oldName) { /* 替换类名 */
+    this.removeClass(ele, oldName)
+    this.addClass(ele, newName)
+  },
+  siblings: function(ele) { /* 获取兄弟节点 */
+    console.log(ele.parentNode)
+    let chid = ele.parentNode.children,
+      eleMatch = []
+    for (let i = 0, len = chid.length; i < len; i++) {
+      if (chid[i] !== ele) {
+        eleMatch.push(chid[i])
+      }
+    }
+    return eleMatch
+  },
+  getByStyle: function(obj, name) { /* 获取行间样式属性 */
+    if (obj.currentStyle) {
+      return obj.currentStyle[name]
+    } else {
+      return getComputedStyle(obj, false)[name]
+    }
+  },
+  domToStirng: function(htmlDOM) { /* DOM转字符串 */
+    var div = document.createElement('div')
+    div.appendChild(htmlDOM)
+    return div.innerHTML
+  },
+  stringToDom: function(htmlString) { /* 字符串转DOM */
+    var div = document.createElement('div')
+    div.innerHTML = htmlString
+    return div.children[0]
+  }
+}
+
+```
+
+## 78、图片加载完成
+
+```javascript
+const imgLoadAll = function(arr, callback) { // 图片加载
+  let arrImg = []
+  for (let i = 0; i < arr.length; i++) {
+    let img = new Image()
+    img.src = arr[i]
+    img.onload = function() {
+      arrImg.push(this)
+      if (arrImg.length == arr.length) {
+        callback && callback()
+      }
+    }
+  }
+}	
+```
+
+## 79、音频加载完成操作
+
+```javascript
+
+const loadAudio = function(src, callback) { // 音频加载
+  var audio = new Audio(src)
+  audio.onloadedmetadata = callback
+  audio.src = src
+}
+```
+
+## 80、**不同位置字符字符**
+
+```javascript
+
+const insertAtCursor = function(dom, val) { // 光标所在位置插入字符
+  if (document.selection) {
+    dom.focus()
+    let sel = document.selection.createRange()
+    sel.text = val
+    sel.select()
+  } else if (dom.selectionStart || dom.selectionStart == '0') {
+    let startPos = dom.selectionStart
+    let endPos = dom.selectionEnd
+    let restoreTop = dom.scrollTop
+    dom.value = dom.value.substring(0, startPos) + val + dom.value.substring(endPos, dom.value.length)
+    if (restoreTop > 0) {
+      dom.scrollTop = restoreTop
+    }
+    dom.focus()
+    dom.selectionStart = startPos + val.length
+    dom.selectionEnd = startPos + val.length
+  } else {
+    dom.value += val
+    dom.focus()
+  }
+}
+```
+
+## 81、图片地址转换base64
+
+```javascript
+
+const getBase64 = function(img) { //传入图片路径，返回base64，使用getBase64(url).then(function(base64){},function(err){}); 
+  let getBase64Image = function(img, width, height) { //width、height调用时传入具体像素值，控制大小,不传则默认图像大小
+    let canvas = document.createElement("canvas");
+    canvas.width = width ? width : img.width;
+    canvas.height = height ? height : img.height;
+    let ctx = canvas.getContext("2d");
+    ctx.drawImage(img, 0, 0, canvas.width, canvas.height);
+    let dataURL = canvas.toDataURL();
+    return dataURL;
+  }
+  let image = new Image();
+  image.crossOrigin = '';
+  image.src = img;
+
+  return new Promise((resolve, reject)=>{
+      if(img) {
+        image.onload = function() {
+        resolve(getBase64Image(image));
+      }
+      resolve('')
+    }
+  })
+ 
+}
+```
+
+## 82、 base64 图片下载
+
+```javascript
+
+const downloadFile = function(base64, fileName) { //base64图片下载功能
+  let base64ToBlob = function(code) {
+    let parts = code.split(';base64,');
+    let contentType = parts[0].split(':')[1];
+    let raw = window.atob(parts[1]);
+    let rawLength = raw.length;
+    let uInt8Array = new Uint8Array(rawLength);
+    for (let i = 0; i < rawLength; ++i) {
+      uInt8Array[i] = raw.charCodeAt(i);
+    }
+    return new Blob([uInt8Array], {
+      type: contentType
+    });
+  };
+  let aLink = document.createElement('a');
+  let blob = base64ToBlob(base64); //new Blob([content]);
+  let evt = document.createEvent("HTMLEvents");
+  evt.initEvent("click", true, true); //initEvent不加后两个参数在FF下会报错  事件类型，是否冒泡，是否阻止浏览器的默认行为
+  aLink.download = fileName;
+  aLink.href = URL.createObjectURL(blob);
+  aLink.click();
+}
+```
+
+## 83、浏览器是否支持webp
+
+```javascript
+
+const isSupportWebP = function() { //判断浏览器是否支持webP格式图片
+  return !![].map && document.createElement('canvas').toDataURL('image/webp').indexOf('data:image/webp') == 0;
+}	
+```
+
+## 84、H5键盘缩回，弹起
+
+```javascript
+
+const h5Resize = function(downCb, upCb) { //当软件键盘弹起会改变当前 window.innerHeight，监听这个值变化 [downCb 当软键盘弹起后，缩回的回调,upCb 当软键盘弹起的回调]
+  var clientHeight = window.innerHeight;
+  downCb = typeof downCb === 'function' ? downCb : function() {}
+  upCb = typeof upCb === 'function' ? upCb : function() {}
+  window.addEventListener('resize', () => {
+    var height = window.innerHeight;
+    if (height === clientHeight) {
+      downCb();
+    }
+    if (height < clientHeight) {
+      upCb();
+    }
+  });
+}
 ```
 
