fix: 微信小程序 视频地址转码解析问题

--- a/md/小程序/微信小程序/问题记录.md
+++ b/md/小程序/微信小程序/问题记录.md
@@ -14,6 +14,6 @@
 
 4. 小程序上 video 标签 要设置 referrer-policy="origin" 不然  视频总是会显示不出来
 
-5.
+5. video 地址 如果是中文 不解析 会看不了视频 统一处理名称 encodeURIComponent(fileName)
 
 ​
